CHANGE RowWidget - add new templates

--- a/resources/views/ContentBuilder/Grid/RowWidget.twig
+++ b/resources/views/ContentBuilder/Grid/RowWidget.twig
@@ -1,17 +1,85 @@
-<div class="row">
-
-    <div data-builder-container class="col-xs-12 col-md-8">DROPZONE</div>
-
-    <div class="col-xs-12 col-md-4">
+<div>
+    <div>
+        <!-- 2 Spalten identisch: -->
         <div class="row">
-            <div data-builder-container class="col-xs-6 col-md-12">DROPZONE</div>
+            <div class="col-xs-6" data-builder-container>DROPZONE</div>
+            <div class="col-xs-6" data-builder-container>DROPZONE</div>
         </div>
 
+        <!-- 2 Spalten links groß: -->
         <div class="row">
-            <div data-builder-container class="col-xs-6 col-md-12">DROPZONE</div>
+            <div class="col-xs-8" data-builder-container>DROPZONE</div>
+            <div class="col-xs-4" data-builder-container>DROPZONE</div>
+        </div>
+
+        <!-- 2 Spalten rechts groß: -->
+        <div class="row">
+            <div class="col-xs-4" data-builder-container>DROPZONE</div>
+            <div class="col-xs-8" data-builder-container>DROPZONE</div>
         </div>
     </div>
 
+    <div>
+        <!-- 3 Spalten identisch: -->
+        <div class="row">
+            <div class="col-xs-4" data-builder-container>DROPZONE</div>
+            <div class="col-xs-4" data-builder-container>DROPZONE</div>
+            <div class="col-xs-4" data-builder-container>DROPZONE</div>
+        </div>
 
+        <!-- 3 Spalten links groß: -->
+        <div class="row">
+            <div class="col-xs-6" data-builder-container>DROPZONE</div>
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+        </div>
 
+        <!-- 3 Spalten mitte groß: -->
+        <div class="row">
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+            <div class="col-xs-6" data-builder-container>DROPZONE</div>
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+        </div>
+
+        <!-- 3 Spalten rechts groß: -->
+        <div class="row">
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+            <div class="col-xs-6" data-builder-container>DROPZONE</div>
+        </div>
+
+        <!-- 3 Spalten, links eine, rechts 2: -->
+        <div class="row">
+            <div class="col-xs-8" data-builder-container>DROPZONE</div>
+
+            <div class="col-xs-4">
+                <div class="row">
+                    <div class="col-xs-12" data-builder-container>DROPZONE</div>
+                    <div class="col-xs-12" data-builder-container>DROPZONE</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 3 Spalten, links 2, rechts eine: -->
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="row">
+                    <div class="col-xs-12" data-builder-container>DROPZONE</div>
+                    <div class="col-xs-12" data-builder-container>DROPZONE</div>
+                </div>
+            </div>
+
+            <div class="col-xs-8" data-builder-container>DROPZONE</div>
+        </div>
+    </div>
+
+    <div>
+        
+        <div class="row">
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+            <div class="col-xs-3" data-builder-container>DROPZONE</div>
+        </div>
+    </div>
 </div>
