--- a/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
@@ -13,7 +13,7 @@
 
 			<div class="col-lg-2">
 				<button type="button" class="btn btn-primary" :class="{'disabled': isDisabled}" v-tooltip 
-						data-toggle="tooltip" data-placement="top" @click="triggerFilter()" title="Übernehmen">
+						data-toggle="tooltip" data-placement="top" @click="triggerFilter()" title="{{ trans("Ceres::Template.itemApply") }}">
 				 	<i class="fa fa-check" aria-hidden="true"></i>
 				</button>
 			</div>
