--- a/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
@@ -1,22 +1,20 @@
 <script type="x/template" id="vue-item-filter-price">
-	<div>
-		<div class="row">
-			<div class="col-lg-5 p-r-0 d-table">
-				<div class="input-group-addon">${ currency }</div>
-				<input type="number" class="form-control" @click="selectAll($event)" placeholder="Min" v-model="priceMin">
-			</div>
+	<div class="row">
+		<div class="col-lg-5 p-r-0 d-table p-b-1">
+			<div class="input-group-addon">${ currency }</div>
+			<input type="number" class="form-control" @click="selectAll($event)" placeholder="Min" v-model="priceMin">
+		</div>
 
-			<div class="col-lg-5 p-r-0 d-table">
-				<div class="input-group-addon">${ currency }</div>
-				<input type="number" class="form-control" @click="selectAll($event)" placeholder="Max" v-model="priceMax">
-			</div>
+		<div class="col-lg-5 p-r-0 d-table p-b-1">
+			<div class="input-group-addon">${ currency }</div>
+			<input type="number" class="form-control" @click="selectAll($event)" placeholder="Max" v-model="priceMax">
+		</div>
 
-			<div class="col-lg-2">
-				<button type="button" class="btn btn-primary" :class="{'disabled': isDisabled}" v-tooltip 
-						data-toggle="tooltip" data-placement="top" @click="triggerFilter()" title="{{ trans("Ceres::Template.itemApply") }}">
-				 	<i class="fa fa-check" aria-hidden="true"></i>
-				</button>
-			</div>
-		</div>	
-	</div>
+		<div class="col-lg-2">
+			<button type="button" class="btn btn-primary" :class="{'disabled': isDisabled}" v-tooltip 
+					data-toggle="tooltip" data-placement="top" @click="triggerFilter()" title="{{ trans("Ceres::Template.itemApply") }}">
+				<i class="fa fa-check" aria-hidden="true"></i>
+			</button>
+		</div>
+	</div>	
 </script>
